Fixed overlay z-index on mb

--- a/assets/sass/general/_main.scss
+++ b/assets/sass/general/_main.scss
@@ -38,6 +38,6 @@
     right: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.5); /* Black background with opacity */
-    z-index: 0; /* Specify a stack order in case you're using a different order for other elements */
+    z-index: 1; /* Specify a stack order in case you're using a different order for other elements */
   }
 }
